--- a/action.yml
+++ b/action.yml
@@ -233,7 +233,7 @@ inputs:
   language:
     required: false
     description: ISO code for the response language
-    default: en-US
+    default: zh-TW
   bot_icon:
     required: false
     description: 'The icon for the bot'
