--- a/action.yml
+++ b/action.yml
@@ -151,11 +151,11 @@ inputs:
   openai_light_model:
     required: false
     description: 'Model to use for simple tasks like summarizing diff on a file.'
-    default: '${{ process.env.OPENAI_LIGHT_MODEL }}'
+    default: 'o3-mini'
   openai_heavy_model:
     required: false
     description: 'Model to use for complex tasks such as code reviews.'
-    default: '${{ process.env.OPENAI_HEAVY_MODEL }}'
+    default: 'o3-mini'
   openai_model_temperature:
     required: false
     description: 'Temperature for GPT model'
