--- a/.github/workflows/ai-pr-reviewer.yml
+++ b/.github/workflows/ai-pr-reviewer.yml
@@ -30,3 +30,6 @@ jobs:
           debug: false
           review_simple_changes: false
           review_comment_lgtm: false
+          openai_light_model: 'o3-mini'
+          openai_heavy_model: 'o3-mini'
+          language: 'zh-TW'
