--- a/.github/workflows/ai-pr-reviewer.yml
+++ b/.github/workflows/ai-pr-reviewer.yml
@@ -32,4 +32,5 @@ jobs:
           review_comment_lgtm: false
           openai_light_model: 'o3-mini'
           openai_heavy_model: 'o3-mini'
+          openai_retries: 1
           language: 'zh-TW'
