--- a/.github/workflows/ai-pr-reviewer.yml
+++ b/.github/workflows/ai-pr-reviewer.yml
@@ -28,7 +28,7 @@ jobs:
           debug: false
           review_simple_changes: false
           review_comment_lgtm: false
-          openai_light_model: 'o3-mini'
+          openai_light_model: 'gpt-3.5-turbo'
           openai_heavy_model: 'o3-mini'
           openai_retries: 1
           language: 'zh-TW'
