--- a/.github/workflows/ai-pr-reviewer.yml
+++ b/.github/workflows/ai-pr-reviewer.yml
@@ -20,7 +20,7 @@ jobs:
   review:
     runs-on: ubuntu-latest
     steps:
-      - uses: aoba-tw/ai-pr-reviewer@v1.0.1.6
+      - uses: aoba-tw/ai-pr-reviewer@v1.0.1.7
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
@@ -29,6 +29,6 @@ jobs:
           review_simple_changes: false
           review_comment_lgtm: false
           openai_light_model: 'gpt-3.5-turbo'
-          openai_heavy_model: 'o3-mini'
+          openai_heavy_model: 'gpt-3.5-turbo' # o3-mini
           openai_retries: 1
           language: 'zh-TW'
