--- a/.github/workflows/ai-pr-reviewer.yml
+++ b/.github/workflows/ai-pr-reviewer.yml
@@ -20,12 +20,12 @@ jobs:
   review:
     runs-on: ubuntu-latest
     steps:
-      - uses: aoba-tw/ai-pr-reviewer@v1.0.1.12
+      - uses: aoba-tw/ai-pr-reviewer@v1.0.1.13
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         with:
-          debug: false
+          debug: true
           review_simple_changes: false
           review_comment_lgtm: false
           openai_light_model: 'o3-mini'
